# film-sqipper

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
.circleci/: config.yml
scripts/: docker-build-push.sh  example.json  run.sh
src/: main.rs  message.rs  sqip.rs
